# wars2

./: Cargo.toml  README.md
crates/waffle-func-reloop/: Cargo.toml
crates/waffle-func-reloop/src/: lib.rs
crates/wars/: Cargo.toml
crates/wars-rt/: Cargo.toml
crates/wars-rt/src/: func.rs  gc.rs  lib.rs  wasix.rs  wrl.rs
crates/wars-rt/src/func/: unsync.rs  value.rs
crates/wars/src/: impl.rs  lib.rs  new_backend.rs  shared.rs  unswitch.rs
docs/: generated-abi.md  new-backend-plan.md  wars-rt.md
waffle-func-reloop/: Cargo.toml
waffle-func-reloop/src/: lib.rs
wars/: Cargo.toml
wars-rt/: Cargo.toml
wars-rt/src/: func.rs  gc.rs  lib.rs  wasix.rs  wrl.rs
wars-rt/src/func/: unsync.rs
wars/src/: lib.rs  unswitch.rs
