[workspace]
members = ["crates/wars", "crates/wars-rt", "crates/waffle-func-reloop"]
resolver = "3"

[workspace.package]
license = "CC0-1.0"
description = "Wasm to Rust converter"
version = "0.8.1"

[workspace.dependencies]
waffle = { package = "portal-pc-waffle", version = "^0.5.5" }
wasmparser = "0.240.0"