[package]
name = "wars-rt"
version = "0.7.0"
edition = "2021"
license = "CC0-1.0"
description = "Wasm to Rust converter runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1.0.86",default-features=false}
castaway = "0.2.2"
derive_more = "0.99.17"
either = { version = "1.13.0", default-features = false }
ic-stable-structures = { version = "0.6.5", optional = true }
paste = "1.0.15"
spin = "0.9.8"
portal-pc-tramp = "0.3.0+portal"
tuple_list = "0.1.3"
# wars-macro = { version = "0.6.0", path = "../wars-macro" }
dumpster = { version = "1.0.0", optional = true }
# wasm_runtime_layer = "0.4.0"

[features]
ic-stable-structures = ["dep:ic-stable-structures"]
std = ["anyhow/std","spin/std"]
dumpster = ["dep:dumpster","std"]
