[package]
name = "wars"
version = "0.7.0"
edition = "2021"
license = "CC0-1.0"
description = "Wasm to Rust converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
hex = "0.4.3"

waffle = {package="portal-pc-waffle",version="^0.5"}
proc-macro2 = "1.0.85"
quasiquote = "0.1.1"
quote = "1.0.36"
relooper = "0.1.0"
sha3 = "0.10.8"
syn = "2.0.66"
waffle-func-reloop = { version = "0.7.0", path = "../waffle-func-reloop" }
# witx = {git="https://github.com/wasix-org/wasix-witx.git",branch="main"}
anyhow = "1.0.93"
