[package]
name = "wars"
edition = "2021"
license.workspace =  true # = "CC0-1.0"
description.workspace =  true # = "Wasm to Rust converter"
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
hex = "0.4.3"

waffle={workspace = true,optional = true}
proc-macro2 = "1.0.85"
quasiquote = "0.1.1"
quote = "1.0.36"
relooper = "0.1.0"
sha3 = "0.10.8"
syn = "2.0.66"
waffle-func-reloop={workspace = true,optional = true}
# witx = {git="https://github.com/wasix-org/wasix-witx.git",branch="main"}
anyhow = "1.0.93"

waffle-passes-shared={workspace = true,optional = true}

[features]
waffle = ["dep:waffle","dep:waffle-passes-shared","dep:waffle-func-reloop"]